--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wakulator",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.1",
-    "@solidjs/start": "^1.0.1",
+    "@solidjs/router": "^0.14.3",
+    "@solidjs/start": "^1.0.6",
     "goober": "^2.1.14",
-    "html2canvas": "^1.4.1",
-    "solid-js": "^1.8.17",
-    "solid-styled-components": "git+https://github.com/revoltchat/solid-styled-components.git",
-    "vinxi": "^0.4.0"
+    "modern-screenshot": "^4.4.39",
+    "solid-js": "^1.8.21",
+    "solid-styled-components": "git+https://github.com/revoltchat/solid-styled-components.git#79f54fe1e3fab962c81b259bebcf472af2fce006",
+    "vinxi": "^0.4.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.11",
     "prettier": "^3.3.3"
   },
   "engines": {
     "node": ">=20"
   },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
 }
