:recycle: refactor: 계산 로직 전체 리팩토링, 라이브러리 업데이트

--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.3",
-    "@solidjs/start": "^1.0.6",
-    "goober": "^2.1.14",
-    "modern-screenshot": "^4.4.39",
-    "solid-js": "^1.8.21",
-    "solid-styled-components": "git+https://github.com/revoltchat/solid-styled-components.git#79f54fe1e3fab962c81b259bebcf472af2fce006",
-    "vinxi": "^0.4.1"
+    "@solidjs/router": "^0.15.3",
+    "@solidjs/start": "^1.0.11",
+    "goober": "^2.1.16",
+    "modern-screenshot": "^4.5.5",
+    "solid-js": "^1.9.4",
+    "solid-styled-components": "github:revoltchat/solid-styled-components#79f54fe1e3fab962c81b259bebcf472af2fce006",
+    "vinxi": "^0.5.1",
+    "vite-plugin-simple-html": "^0.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "prettier": "^3.3.3"
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2"
   },
   "engines": {
     "node": ">=20"
   },
-  "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
+  "packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
 }
